# rykker-godset-opp

./: .gitignore  .mise.toml  AGENTS.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: update-site.yml
scripts/: build_site.py  fetch_data.py  generate_stats.py  validate_ci.py
site/: manifest.json  sitemap.xml  style.css
templates/: index.html.j2
